--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "license": "Apache-2.0",
     "repository": "git@github.com:SwiftPackageIndex/SwiftPackageIndex-Server.git",
     "scripts": {
-        "build": "./FrontEnd/esbuild.mjs",
-        "serve": "./FrontEnd/esbuild.mjs --watch"
+        "build": "node ./FrontEnd/esbuild.mjs",
+        "serve": "node ./FrontEnd/esbuild.mjs --watch"
     },
     "dependencies": {
         "@hotwired/stimulus": "^3.2.1",
