--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     container:
-      image: registry.gitlab.com/finestructure/spi-base:1ca519936847a126d73a92d61ac254b56de5ec21
+      image: registry.gitlab.com/finestructure/spi-base:0.15.2
     services:
       postgres:
         image: postgres:13.11-alpine
