Switch to self-hosted

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ on:
 jobs:
   test-linux:
     name: Test
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted
     container:
       image: registry.gitlab.com/finestructure/spi-base:0.15.2
     services:
