Revert "Merge pull request #2941 from SwiftPackageIndex/use-self-hosted-runner"
This reverts commit 0b72fc77f1e76276ec0e56e08c8bb153f2152c8b, reversing
changes made to dc8bb752b624216706cbe70087170ac59ad521e8.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,7 @@ on:
 jobs:
   test-linux:
     name: Test
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container:
       image: registry.gitlab.com/finestructure/spi-base:0.15.2
     services:
