--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -21,8 +21,7 @@ on:
 jobs:
   test-linux:
     name: Query Performance Test
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     continue-on-error: true
     container:
       image: registry.gitlab.com/finestructure/spi-base:0.15.2
