--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -28,6 +28,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with: { 'fetch-depth': 0 }
       - name: Install unzip
         run: apt-get update && apt-get install -y unzip
       - name: Run tests
