Switch to daily again

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,7 +33,7 @@ updates:
     commit-message:
       prefix: "Swift:"
     schedule:
-      interval: "weekly"
+      interval: "daily"
       time: "02:00"
     groups:
       swift-dependencies:
