Gate to dev and make the route private

--- a/app.yml
+++ b/app.yml
@@ -37,6 +37,8 @@ x-shared: &shared
     BUILDER_TOKEN: ${BUILDER_TOKEN}
     CHECKOUTS_DIR: ${CHECKOUTS_DIR}
     COLLECTION_SIGNING_PRIVATE_KEY: ${COLLECTION_SIGNING_PRIVATE_KEY}
+    # FIXME: temporary
+    CRASH_ROUTE: ${CRASH_ROUTE}
     DATABASE_ID: ${DATABASE_ID}
     DATABASE_HOST: ${DATABASE_HOST}
     DATABASE_PORT: ${DATABASE_PORT}
