--- a/app.yml
+++ b/app.yml
@@ -55,6 +55,7 @@ x-shared: &shared
     MASTODON_ACCESS_TOKEN: ${MASTODON_ACCESS_TOKEN}
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
     PLAUSIBLE_BACKEND_REPORTING_SITE_ID: ${PLAUSIBLE_BACKEND_REPORTING_SITE_ID}
+    RUNNER_IDS: ${RUNNER_IDS}
     SITE_URL: ${SITE_URL}
     SWIFT_BACKTRACE: ${SWIFT_BACKTRACE}
     TWITTER_API_KEY: ${TWITTER_API_KEY}
