--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     container:
-      image: registry.gitlab.com/finestructure/spi-base:0.15.2
+      image: registry.gitlab.com/finestructure/spi-base:e3be12525c6d73e226874492f7e14dc1cdfc1e47
       options: --privileged
     services:
       postgres:
