--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:e3be12525c6d73e226874492f7e14dc1cdfc1e47
+      image: registry.gitlab.com/finestructure/spi-base:1.0.0
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
