Added Orka blog post.

--- a/Resources/Blog/posts.yml
+++ b/Resources/Blog/posts.yml
@@ -183,3 +183,8 @@
   summary: Does Swift Package Index support DocC’s support for custom themes? Of course we do! Find out how, and see a great example of a package that’s taking advantage of this feature.
   published_at: 2024-03-25
   published: true
+- slug: switching-to-ephemeral-macos-build-runners
+  title: Switching to ephemeral macOS build runners
+  summary: We recently transitioned our Mac build machines that power our compatibility and documentation build system from a manually configured and maintained collection of Mac mini machines to a new Orka cluster from MacStadium. It provides complete isolation for builds, and a more efficient use of our build machines.
+  published_at: 2024-06-03
+  published: false
