--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     container:
-      image: registry.gitlab.com/finestructure/spi-base:4fcc1f2f64a0db61adf5b42690398b9c49b85eef
+      image: registry.gitlab.com/finestructure/spi-base:1.0.1
       options: --privileged
     services:
       postgres:
