--- a/infrastructure/loki.yml
+++ b/infrastructure/loki.yml
@@ -62,15 +62,15 @@ storage_config:
 
 compactor:
   working_directory: /tmp/loki/boltdb-shipper-compactor
+  compaction_interval: 10m
+  retention_enabled: true
+  retention_delete_delay: 2h
+  retention_delete_worker_count: 150
+  delete_request_store: filesystem
 
-limits_config:
-  reject_old_samples: true
-  reject_old_samples_max_age: 168h
-  split_queries_by_interval: 24h
-
-table_manager:
-  retention_deletes_enabled: true
-  retention_period: 168h
+# https://grafana.com/docs/loki/latest/operations/storage/retention/#configuring-the-retention-period
+  limits_config:
+    retention_period: 336h # 14 days
 
 ruler:
   storage:
