--- a/app.yml
+++ b/app.yml
@@ -51,6 +51,7 @@ x-shared: &shared
     GITLAB_PIPELINE_LIMIT: ${GITLAB_PIPELINE_LIMIT}
     GITLAB_PIPELINE_TOKEN: ${GITLAB_PIPELINE_TOKEN}
     HIDE_STAGING_BANNER: ${HIDE_STAGING_BANNER}
+    HOMEPAGE_INTERSTITIAL: ${HOMEPAGE_INTERSTITIAL}
     LOG_LEVEL: ${LOG_LEVEL}
     MASTODON_ACCESS_TOKEN: ${MASTODON_ACCESS_TOKEN}
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
