--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:847e56642a971795e132c9a523a14a285c791bef
+      image: registry.gitlab.com/finestructure/spi-base:1.0.2
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
