Disable workflow concurrency on branch

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,10 @@ on:
     workflow_dispatch:
     push:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
     lint-front-end:
         name: Lint Front-End
