--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     container:
-      image: registry.gitlab.com/finestructure/spi-base:1.0.3
+      image: registry.gitlab.com/finestructure/spi-base:12131ba910577b03a162dba5ea9de77cbccfad1f
       options: --privileged
     services:
       postgres:
