--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:12131ba910577b03a162dba5ea9de77cbccfad1f
+      image: registry.gitlab.com/finestructure/spi-base:1.1.0
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
