Add release build CI stage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,21 @@ jobs:
           DATABASE_HOST: postgres
           DATABASE_PORT: '5432'
 
+  release-build-linux:
+    name: Release build
+    runs-on: ubuntu-latest
+    container:
+      image: registry.gitlab.com/finestructure/spi-base:1.1.0
+      options: --privileged
+    steps:
+      - name: GH Runner bug workaround
+        run: sysctl -w vm.mmap_rnd_bits=28
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with: { 'fetch-depth': 0 }
+      - name: Build release
+        run: swift build -c release --static-swift-stdlib -Xlinker -ljemalloc
+
   # test-macos:
   #   name: Test macOS
   #   runs-on: macOS-latest
