--- a/app.yml
+++ b/app.yml
@@ -46,6 +46,7 @@ x-shared: &shared
     DATABASE_USERNAME: ${DATABASE_USERNAME}
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     DATABASE_USE_TLS: ${DATABASE_USE_TLS}
+    ENABLE_CF_RAY_LOGGING: ${ENABLE_CF_RAY_LOGGING}
     FAILURE_MODE: ${FAILURE_MODE}
     GITHUB_TOKEN: ${GITHUB_TOKEN}
     GITLAB_API_TOKEN: ${GITLAB_API_TOKEN}
