Add dependency to ensure redis is started before the server

--- a/app.yml
+++ b/app.yml
@@ -74,6 +74,7 @@ services:
     <<: *shared
     depends_on:
       - migrate
+      - redis
     ports:
       - '80:80'
     command: ["serve", "--env", "${ENV}", "--hostname", "0.0.0.0", "--port", "80"]
