--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:1.1.0
+      image: registry.gitlab.com/finestructure/spi-base:6d78ede58906e433b561e620dc2bb031ea24441e
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
