--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,20 +31,6 @@ jobs:
     container:
       image: registry.gitlab.com/finestructure/spi-base:1.2.0
       options: --privileged
-    services:
-      postgres:
-        image: postgres:16-alpine
-        env:
-          POSTGRES_DB: spi_test
-          POSTGRES_USER: spi_test
-          POSTGRES_PASSWORD: xxx
-        ports:
-          - '5432:5432'
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
       - name: GH Runner bug workaround
         run: sysctl -w vm.mmap_rnd_bits=28
@@ -59,6 +45,113 @@ jobs:
           COLLECTION_SIGNING_PRIVATE_KEY: ${{ secrets.COLLECTION_SIGNING_PRIVATE_KEY }}
           DATABASE_HOST: postgres
           DATABASE_PORT: '5432'
+    services:
+      # Make sure the ports expose here (6000-60007) align with the ports
+      # hard-coded in DatabasePool.runningDatabases().
+      db-0:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
+          POSTGRES_PASSWORD: xxx
+        ports:
+          - '6000:5432'
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      db-1:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
+          POSTGRES_PASSWORD: xxx
+        ports:
+          - '6001:5432'
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      db-2:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
+          POSTGRES_PASSWORD: xxx
+        ports:
+          - '6002:5432'
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      db-3:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
+          POSTGRES_PASSWORD: xxx
+        ports:
+          - '6003:5432'
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      db-4:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
+          POSTGRES_PASSWORD: xxx
+        ports:
+          - '6004:5432'
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      db-5:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
+          POSTGRES_PASSWORD: xxx
+        ports:
+          - '6005:5432'
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      db-6:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
+          POSTGRES_PASSWORD: xxx
+        ports:
+          - '6006:5432'
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      db-7:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: spi_test
+          POSTGRES_USER: spi_test
+          POSTGRES_PASSWORD: xxx
+        ports:
+          - '6007:5432'
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
   release-build-linux:
     name: Release build
