--- a/.env.testing.template
+++ b/.env.testing.template
@@ -1,5 +1,8 @@
 DATABASE_HOST=localhost
-DATABASE_PORT=5432
+# DATABASE_PORT - unused
+# CI uses a hard-coded range 6000-6007,
+# locally it discovers running containers
+# and launches dbs as needed.
 DATABASE_NAME=spi_test
 DATABASE_USERNAME=spi_test
 DATABASE_PASSWORD=xxx
