--- a/.env.testing.template
+++ b/.env.testing.template
@@ -1,6 +1,6 @@
-DATABASE_HOST=localhost
+# DATABASE_HOST=localhost
 # DATABASE_PORT - unused
-# CI uses a hard-coded range 6000-6007,
+# CI uses a hard-coded range 6000-6007 of ports and corresponding hosts,
 # locally it discovers running containers
 # and launches dbs as needed.
 DATABASE_NAME=spi_test
