--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
         run: cp .env.testing.template .env.testing && swift test --filter AnalyzerTests
         env:
           COLLECTION_SIGNING_PRIVATE_KEY: ${{ secrets.COLLECTION_SIGNING_PRIVATE_KEY }}
+          DATABASEPOOL_SIZE: 8
     services:
       # Make sure the ports expose here (6000-60007) align with the ports
       # hard-coded in DatabasePool.runningDatabases().
