Revert some debug changes

--- a/.env.testing.template
+++ b/.env.testing.template
@@ -1,4 +1,4 @@
-# DATABASE_HOST=localhost
+# DATABASE_HOST - localhost
 # DATABASE_PORT - unused
 # CI uses a hard-coded range 6000-6007 of ports and corresponding hosts,
 # locally it discovers running containers
