--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,15 @@ jobs:
         with: { 'fetch-depth': 0 }
       - name: Build release
         run: swift build -c release --static-swift-stdlib -Xlinker -ljemalloc
+      - name: Test launch
+        run: |
+          # Since we're only pinging the version api endpoint, no database is needed and
+          # we can just copy the testing template to ensure the db env variables are set.
+          cp .env.testing.template .env.testing
+          # FIXME: change to `-c release` after testing!!!
+          swift run -c debug Run serve --port 8080 &
+          sleep 2
+          [ "$(curl -sL -w "%{http_code}" -o /dev/null http://localhost:8080/api/version)" == "200" ] || echo Connection failed
 
   # test-macos:
   #   name: Test macOS
