--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with: { 'fetch-depth': 0 }
-      - name: Build release
-        run: swift build -c release --static-swift-stdlib -Xlinker -ljemalloc
+      # - name: Build release
+      #   run: swift build -c release --static-swift-stdlib -Xlinker -ljemalloc
       - name: Test launch
         run: |
           # Since we're only pinging the version api endpoint, no database is needed and
@@ -82,7 +82,7 @@ jobs:
           # FIXME: change to `-c release` after testing!!!
           swift run -c debug Run serve --port 8080 &
           sleep 2
-          [ "$(curl -sL -w "%{http_code}" -o /dev/null http://localhost:8080/api/version)" == "200" ] || echo Connection failed
+          bash -c '[ "$(curl -sL -w "%{http_code}" -o /dev/null http://localhost:8080/api/version)" == "200" ] || echo Connection failed'
 
   # test-macos:
   #   name: Test macOS
