--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,8 @@ jobs:
       - name: Test release
         run: |
           # Since we're only pinging the version api endpoint, no database is needed and
-          # we can just copy the testing template to ensure the db env variables are set.
-          cp .env.testing.template .env.testing
+          # we can just copy the development template to ensure the db env variables are set.
+          cp .env.development.template .env.development
           # FIXME: change to `-c release` after testing!!!
           #   swift build -c release --static-swift-stdlib -Xlinker -ljemalloc
           #   sleep 10
