--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,8 @@ jobs:
     container:
       image: registry.gitlab.com/finestructure/spi-base:1.2.0
       options: --privileged
+      ports:
+        - '8080:8080'
     steps:
       - name: GH Runner bug workaround
         run: sysctl -w vm.mmap_rnd_bits=28
@@ -83,9 +85,9 @@ jobs:
           #   swift run -c release Run serve --port 8080 --host 0.0.0.0 &
           swift build -c debug --static-swift-stdlib -Xlinker -ljemalloc
           sleep 10
-          $(swift build --show-bin-path -c debug)/Run serve --port 18080 --hostname 0.0.0.0 &
+          $(swift build --show-bin-path -c debug)/Run serve --port 8080 --hostname 0.0.0.0 &
           echo Probing api/version...
-          bash -c '[ "$(curl -sL -w "%{http_code}" -o /dev/null http://localhost:18080/api/version)" == "200" ] || (echo Connection failed ; exit 1)'
+          bash -c '[ "$(curl -sL -w "%{http_code}" -o /dev/null http://localhost:8080/api/version)" == "200" ] || (echo Connection failed ; exit 1)'
 
   # test-macos:
   #   name: Test macOS
