--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: registry.gitlab.com/finestructure/spi-base:1.2.0
-      options: |
-        --privileged
-        --network="host"
+      options: --privileged
       ports:
         - '8080:8080'
     steps:
