--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:1.2.0
+      image: registry.gitlab.com/finestructure/spi-base:224946a41aedd5106245666d7261a5218ceac0fc
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
