--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     container:
-      image: registry.gitlab.com/finestructure/spi-base:224946a41aedd5106245666d7261a5218ceac0fc
+      image: registry.gitlab.com/finestructure/spi-base:1.2.2
       options: --privileged
     steps:
       - name: GH Runner bug workaround
@@ -157,7 +157,7 @@ jobs:
     name: Release build
     runs-on: ubuntu-latest
     container:
-      image: registry.gitlab.com/finestructure/spi-base:224946a41aedd5106245666d7261a5218ceac0fc
+      image: registry.gitlab.com/finestructure/spi-base:1.2.2
       options: --privileged
     steps:
       - name: GH Runner bug workaround
