Revert "Fix `fatal: detected dubious ownership`"
This reverts commit 0b5486299942a7f28ce01e950a0ec1e62942c942.

--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -47,11 +47,7 @@ jobs:
           restore-keys: "spi-query-performance-build-${{ runner.os }}-"
 
       - name: Build tests
-        run: |
-          # Fix for
-          # fatal: detected dubious ownership in repository at '/__w/SwiftPackageIndex-Server/SwiftPackageIndex-Server'
-          git config --global --add safe.directory /__w/SwiftPackageIndex-Server/SwiftPackageIndex-Server
-          cp .env.testing.template .env.testing && make build-tests
+        run: cp .env.testing.template .env.testing && make build-tests
 
       - name: Cache .build
         if: steps.restore-cache.outputs.cache-hit != 'true'
