--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:b1b04e30539d3e29f6e2b2ce31e1edfadae33077
+      image: registry.gitlab.com/finestructure/spi-base:1.3.0
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
