--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:7df7f85240c7bd1503e33cede1f9fe9410a7a0f0
+      image: registry.gitlab.com/finestructure/spi-base:2.1.0
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
