--- a/mon.yml
+++ b/mon.yml
@@ -110,7 +110,9 @@ services:
 
   cadvisor:
     # https://github.com/google/cadvisor/releases
-    image: gcr.io/cadvisor/cadvisor:v0.53.0
+    # sas 2025-11-24: v0.53.0 inexplicably has disappeared from the registry
+    # see https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/issues/3907
+    image: gcr.io/cadvisor/cadvisor:v0.52.1
     networks:
       - app_backend
     volumes:
