--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,5 +14,8 @@
     },
     "runArgs": [
       "--network=spi_test"
-    ]
+    ],
+    "containerEnv": {
+      "GITHUB_WORKFLOW": "1"
+    }
 }
