Add RUNNING_IN_DEVCONTAINER env variable instead of overloading CI one

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,6 @@
       "--network=spi_test"
     ],
     "containerEnv": {
-      "GITHUB_WORKFLOW": "1"
+      "RUNNING_IN_DEVCONTAINER": "1"
     }
 }
