Bring back `allow: [dependency-type: all]`

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,6 +27,8 @@ updates:
           - "*"
   - package-ecosystem: "swift"
     directory: "/"
+    allow:
+      - dependency-type: all
     commit-message:
       prefix: "Swift:"
     schedule:
